<resources>
    <string name="app_name">Recipe App</string>

    <string name="search_text">レシピ名か食材で検索</string>

    <string name="recipe_title">レシピ名</string>
    <string name="recipe_category">カテゴリー</string>
    <string-array name="recipe_category_list">
        <item>主菜</item>
        <item>副菜</item>
        <item>丼・麺類</item>
        <item>デザート</item>
    </string-array>

    <string name="category_all">すべて</string>
    <string name="category_main">主菜</string>
    <string name="category_sub">副菜</string>
    <string name="category_rice">丼・麺類</string>
    <string name="category_dessert">デザート</string>

    <string name="recipe_image">イメージ</string>
    <string name="recipe_ingredients">材料</string>
    <string name="recipe_memo">料理メモ</string>
    <string name="recipe_link">リンク</string>
    <string name="recipe_date">作った日</string>
    <string name="recipe_delete">削除</string>
    <string name="recipe_save">保存</string>

    <string name="ingredients_helper_text">材料ごとに改行して入力してください</string>

    <string name="recipe_edit_fragment_title">レシピ編集</string>
    <string name="home_fragment_title">レシピ一覧</string>
    <string name="recipe_detail_fragment_title">レシピ詳細</string>

    <string name="image_select">写真</string>
    <string-array name="storage_or_camera">
        <item>フォルダから選択</item>
        <item>カメラを起動</item>
    </string-array>

    <string name="sample_text">ここに内容を表示</string>
    <string name="text_nothing">未登録</string>

    <string name="shopping_list_title">買い物リスト</string>
    <string name="all_shopping_list_title">買い物リスト一覧</string>
    <string name="shopping_add_text">買いたいものを追加</string>
    <string name="shopping_list_delete">リストを削除</string>

    <string name="add_recipe_title">新しいレシピを追加</string>
    <string name="make_shopping_list">買い物リストを作成</string>

    <string name="make_button">作成</string>
    <string name="cancel_button">キャンセル</string>
    <string name="make_list_finish_text">買い物リストを作成しました</string>

    <string name="favorite_recipe_text">お気に入りレシピ</string>
    <string name="favorite_add_text">お気に入り登録する</string>
    <string name="delete">delete</string>

    <string name="sample_calendar_title">2022/6</string>
    <string name="sample_calendar_edit_title">2022/6/1</string>
    <string name="prev_month_button">前の月</string>
    <string name="next_month_button">次の月</string>
    <string name="calendar_label">献立カレンダー</string>
    <string name="sun">日</string>
    <string name="mon">月</string>
    <string name="tue">火</string>
    <string name="wed">水</string>
    <string name="thu">木</string>
    <string name="fri">金</string>
    <string name="sat">土</string>

    <string name="main_dish_hint">メイン料理</string>
    <string name="side_dish_hint">一緒に作ったもの</string>
    <string name="cook_memo_hint">メモ</string>
    <string name="cooking_date_label">献立記録</string>


    <string name="cooking_history_title">献立履歴を検索</string>
    <string name="history_search_text">料理名で検索</string>
    <string name="main_dish">メイン料理：%1$s</string>
    <string name="side_dish">一緒に作ったもの：</string>
    <string name="memo">メモ：</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
