<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <RadioGroup
        android:id="@+id/category_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/category_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_all" />
        <RadioButton
            android:id="@+id/category_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_main"/>
        <RadioButton
            android:id="@+id/category_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sub"/>
        <RadioButton
            android:id="@+id/category_rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_rice"/>
        <RadioButton
            android:id="@+id/category_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_dessert"/>

    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_group"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <SearchView
            android:id="@+id/search_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_text" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"/>


</androidx.constraintlayout.widget.ConstraintLayout>