<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black"
            tools:text="@string/sample_calendar_edit_title"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/main_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dish"
            android:textColor="@color/black"
            android:textStyle="bold"/>

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/side_dish"/>-->

        <TextView
            android:id="@+id/side_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/side_dish_hint" />

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/memo"/>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/memo_image"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_baseline_edit_note_24"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/cook_memo_hint"
                android:visibility="gone"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>