<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RecipeDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/recipe_title"
                android:gravity="center_horizontal"
                style="@style/RecipeAppTextviewTitle"
                android:textSize="30sp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detail_image"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_title"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_image_24"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_favorite_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    app:icon="@drawable/ic_baseline_favorite_border_24"
                    android:text="@string/favorite_add_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favorite_recipe_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_baseline_favorite_24"
                    android:text="@string/favorite_recipe_text" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail_ingredients_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/RecipeAppTextviewTitle"
                    app:layout_constraintTop_toBottomOf="@+id/detail_image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/recipe_ingredients"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/make_list_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="16dp"
                    android:text="@string/make_shopping_list"
                    app:icon="@drawable/ic_baseline_shopping_basket_24"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_ingredients_title"
                style="@style/RecipeAppTextviewDetail"
                tools:text="@string/sample_text"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RecipeAppTextviewTitle"
                app:layout_constraintTop_toBottomOf="@+id/detail_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recipe_link"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_link_title"
                style="@style/RecipeAppTextviewDetail"
                android:autoLink="web"
                tools:text="@string/sample_text"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RecipeAppTextviewTitle"
                app:layout_constraintTop_toBottomOf="@+id/detail_link"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recipe_date"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_date_title"
                style="@style/RecipeAppTextviewDetail"
                tools:text="@string/sample_text"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/recipe_edit_fragment_title" />

</androidx.constraintlayout.widget.ConstraintLayout>