<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CalendarEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/cook_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_calendar_edit_title"
                style="@style/RecipeAppTextviewTitle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_dish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/main_dish_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_dish_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" >
                    <requestFocus/>
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/side_dish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/side_dish_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/side_dish_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cook_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/cook_memo_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cook_memo_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cooking_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cooking_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:visibility="invisible"
        android:text="@string/recipe_delete"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cooking_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cooking_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        android:textStyle="bold"
        android:text="@string/recipe_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>